--- a/source/stylesheets/partials/_nav.scss
+++ b/source/stylesheets/partials/_nav.scss
@@ -3,15 +3,11 @@
   padding: 1em 1em;
   position: relative;
   font-size: 14px;
+  border-bottom: 1px solid rgb(241, 241, 241);
 
   @include media($medium-screen-up) {
     height: 4em;
-    padding: 1em 0;
-  }
-
-  &-border {
-    border-bottom: 1px solid rgb(241, 241, 241);
-    padding: 15px 0;
+    padding: 2em 0 4em;
   }
 }
 
